--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "hammerjs": "^2.0.8",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "swiper": "^11.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
