--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "gsap": "^3.12.5",
     "hammerjs": "^2.0.8",
+    "intersection-observer": "^0.12.2",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
