--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-spring/web": "^9.7.4",
     "gsap": "^3.12.5",
     "hammerjs": "^2.0.8",
     "intersection-observer": "^0.12.2",
